<resources>
    <string name="app_name">Battling</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid ip</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_controller">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="rocker">rocker</string>
    <string name="action_top1">Action Top1</string>
    <string name="action_top2">Action Top2</string>
    <string name="action_top3">Action Top3</string>
    <string name="action_left1">Action Left1</string>
    <string name="action_left2">Action Left2</string>
</resources>
